# uniswap-alike-in-polkadot

./: Cargo.toml  LICENSE  README.md
uniswap-v2/contracts/factory/: Cargo.toml  lib.rs
uniswap-v2/contracts/factory/tests/: e2e_tests.rs  unit_tests.rs
uniswap-v2/contracts/pair/: Cargo.toml  lib.rs
uniswap-v2/contracts/pair/tests/: e2e_tests.rs  unit_tests.rs
uniswap-v2/logics/: Cargo.toml  lib.rs
uniswap-v2/logics/impls/pair/: data.rs  pair.rs
